--- a/Frames_Pages/MainWindow.xaml
+++ b/Frames_Pages/MainWindow.xaml
@@ -5,10 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Frames_Pages"
         mc:Ignorable="d"
-        Title="PasswordManager" Height="450" Width="800" Background="#FF474747" WindowStartupLocation="CenterScreen">
-    <Frame x:Name="frame" Content=""  NavigationUIVisibility="Hidden" >
-      
-    </Frame>
+        Title="PasswordManager" Height="1000" Width="1800" WindowStartupLocation="CenterScreen">
+    <Window.Background>
+        <ImageBrush ImageSource="Resources/bg1.jpg"/>
+    </Window.Background>
+    <Frame x:Name="frame" Content=""  NavigationUIVisibility="Hidden" />
     <Window.Icon>
         <BitmapImage UriSource="C:\Users\ghise\source\repos\Frames_Pages\Frames_Pages\Resources\padlockicon.png" ></BitmapImage>
     </Window.Icon>
