--- a/Frames_Pages/MainPage.xaml
+++ b/Frames_Pages/MainPage.xaml
@@ -10,15 +10,31 @@
 
     <Grid>
 
-        <Label Content="Login" HorizontalAlignment="Left" Margin="888,294,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="48" Foreground="#FF458D84" Width="182"/>
-        <TextBox x:Name="usernameBox"  Foreground="Gray" GotFocus="TextBox_GotFocus" LostFocus="TextBox_LostFocus" HorizontalAlignment="Left" Height="40" Margin="888,440,0,0" Text="Username" VerticalAlignment="Top" Width="182" Background="#FF9AEC69" FontSize="20" MaxWidth="200" MaxHeight="50" Padding="2" />
-        <PasswordBox x:Name="passwordBox" Password="" PasswordChar="*"  Margin="890,497,722,432" 
-            Background="#FFFEE68E"  FontSize="20" Visibility="Visible" LostFocus="PlaceholderPasswordBox_LostFocus" Height="40" MaxWidth="200" MaxHeight="50" Padding="2"/>
-        <TextBox x:Name="placeholderTextBox" Text="Password" Foreground="Gray"
-            GotFocus="PlaceholderTextBox_GotFocus" Margin="888,497,722,432" FontSize="20" Background="#FF94DE68" MaxWidth="200" MaxHeight="50" Padding="2"/>
-        <Button x:Name="loginBtn" Content="Login" HorizontalAlignment="Left" Margin="890,558,0,0" VerticalAlignment="Top" Width="180" Height="30" Background="#FF3B7F7B" FontSize="18" Click="LoginBtn_Click"/>
-        <Button x:Name="registerBtn" Content="Register" HorizontalAlignment="Left" Margin="74,896,0,0" VerticalAlignment="Top" Width="180" Height="30" Background="#FF3B7F7B" FontSize="18" Click="RegisterBtn_Click"/>
-        <Label Content="Not a user? Please register! " HorizontalAlignment="Left" Margin="64,858,0,0" VerticalAlignment="Top" Width="190" Height="33" Foreground="#FF1A726E"/>
+        <Label Content="Login" Margin="781,250,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="68" Width="210" HorizontalAlignment="Left" HorizontalContentAlignment="Center">
+            <Label.Foreground>
+                <SolidColorBrush Color="#FF458D84" Opacity="0.9"/>
+            </Label.Foreground>
+        </Label>
+
+        <TextBox x:Name="usernameBox" Text="Username" GotFocus="TextBox_GotFocus" LostFocus="TextBox_LostFocus"  FontSize="20" Foreground="#FF514F4F" Margin="796,631,810,279" BorderBrush="{x:Null}" SelectionBrush="{x:Null}" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderThickness="0" >
+            <TextBox.Background>
+                <SolidColorBrush Color="White" Opacity="0.5"/>
+            </TextBox.Background>
+        </TextBox>
+        <TextBox x:Name="placeholderTextBox" Text=" Password" Foreground="#FF514F4F" FontSize="20" GotFocus="PlaceholderTextBox_GotFocus" Margin="796,695,810,215" BorderBrush="{x:Null}" SelectionBrush="{x:Null}" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderThickness="0" >
+            <TextBox.Background>
+                <SolidColorBrush Color="#FFF9F5F5" Opacity="0.5"/>
+            </TextBox.Background>
+        </TextBox>
+
+        <Button x:Name="loginBtn" Content="Login" HorizontalAlignment="Left" Margin="798,787,0,0" VerticalAlignment="Top" Width="180" Height="50" Background="#FF3B7F7B" FontSize="18" Click="LoginBtn_Click"/>
+        <Button x:Name="registerBtn" Content="Register" HorizontalAlignment="Left" Margin="799,892,0,0" VerticalAlignment="Top" Width="180" Height="50" Background="#FF3B7F7B" FontSize="18" Click="RegisterBtn_Click"/>
+        <Label Content="Not a user? Please register! " HorizontalAlignment="Left" Margin="810,854,0,0" VerticalAlignment="Top" Width="167" Height="33" Foreground="#FF1A726E"/>
+        <PasswordBox x:Name="passwordBox" Password="" PasswordChar="*"  FontSize="20" Visibility="Collapsed" LostFocus="PlaceholderPasswordBox_LostFocus" Margin="800,559,806,351" BorderBrush="{x:Null}" SelectionBrush="{x:Null}" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderThickness="0">
+            <PasswordBox.Background>
+                <SolidColorBrush Color="White" Opacity="0.5"/>
+            </PasswordBox.Background>
+        </PasswordBox>
 
 
     </Grid>
